--- a/Sugar Rush Game/SugarRush.html
+++ b/Sugar Rush Game/SugarRush.html
@@ -77,7 +77,7 @@
   </style>
 </head>
 <body>
-  <h1>🍭 Sugar Crush 🍬</h1>
+  <h1>🍭 Sugar Rush 🍬</h1>
   <div class="game-info">
     <div class="info-box">Score: <span id="score">0</span></div>
     <div class="info-box">Moves: <span id="moves">0</span></div>
